fix: mime loader testimonials build